[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatreview"
version = "0.1.0"
description = "ChatReview Python package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ChatReview" }]
dependencies = []

[project.scripts]
chatreview = "chatreview.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

